--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
+    "@prisma/client": "^6.1.0",
+    "next": "15.1.1",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
